# tremolo-plugin

./: .gitignore
todo/: CMakeLists.txt
todo/lib/juce-build/: JUCEExportConfig.cmake  Makefile  cmake_install.cmake
todo/lib/juce-build/modules/: Makefile  cmake_install.cmake
todo/lib/juce-build/tools/: CMakeCache.txt  JUCEExportConfig.cmake  JUCEToolsExport.cmake  Makefile  cmake_install.cmake
todo/lib/juce-build/tools/modules/: Makefile  cmake_install.cmake
todo/lib/juce-subbuild/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake
todo/lib/juce-subbuild/juce-populate-prefix/src/juce-populate-stamp/: juce-populate-gitclone-lastrun.txt  juce-populate-update-info.txt
todo/lib/juce-subbuild/juce-populate-prefix/tmp/: juce-populate-gitclone.cmake  juce-populate-gitupdate.cmake  juce-populate-mkdirs.cmake
todo/src/: JsonSerializer.cpp  Parameters.cpp  PluginEditor.cpp  PluginProcessor.cpp
todo/src/include/: BypassTransitionSmoother.h  CustomLookAndFeel.h  JsonSerializer.h  Parameters.h  PluginEditor.h  PluginProcessor.h  Tremolo.h
todo/tremolo_plugin/include/Tremolo/: BypassTransitionSmoother.h  CustomLookAndFeel.h  JsonSerializer.h  Parameters.h  PluginEditor.h  PluginProcessor.h  Tremolo.h
todo/tremolo_plugin/source/: JsonSerializer.cpp  Parameters.cpp  PluginEditor.cpp  PluginProcessor.cpp
